# PCPs

./: .gitmodules  LICENSE  README.md  build.sh
cpufreq_plugin/: CMakeLists.txt  README.md  cpu_freq_plugin.c  uthash.h
epb_plugin/: CMakeLists.txt  README.md  epb_plugin.c
mpit_plugin/: CMakeLists.txt  README.md  mpit_interface.cpp  mpit_interface.h  mpit_plugin.cpp  mpit_plugin.h
openmp_plugin/: CMakeLists.txt  OpenMPTP.c  README.md
sample_plugin/: CMakeLists.txt  README.md  example.c
scorep_plugin_openmp/: CMakeLists.txt
uncorefreq_plugin/: CMakeLists.txt  README.md  uncore_freq_plugin.c  uthash.h
